qt-restricted-extras/qscintilla6/gen_qsciscintilla.h

typedef struct QColor QColor;
typedef struct QsciScintilla QsciScintilla;
void QsciScintilla_setIndicatorDrawUnder2(QsciScintilla* self, bool under, int indicatorNumber);
void QsciScintilla_setIndicatorForegroundColor2(QsciScintilla* self, QColor* col, int indicatorNumber);
void QsciScintilla_setIndicatorHoverForegroundColor2(QsciScintilla* self, QColor* col, int indicatorNumber);
void QsciScintilla_setIndicatorHoverStyle2(QsciScintilla* self, int style, int indicatorNumber);
void QsciScintilla_setIndicatorOutlineColor2(QsciScintilla* self, QColor* col, int indicatorNumber);
void QsciScintilla_clearMarginText1(QsciScintilla* self, int line);
void QsciScintilla_setMarkerBackgroundColor2(QsciScintilla* self, QColor* col, int markerNumber);
void QsciScintilla_setMarkerForegroundColor2(QsciScintilla* self, QColor* col, int markerNumber);
void QsciScintilla_setWrapVisualFlags2(QsciScintilla* self, int endFlag, int startFlag);
void QsciScintilla_setWrapVisualFlags3(QsciScintilla* self, int endFlag, int startFlag, int indent);
bool QsciScintilla_override_virtual_metacall(void* self, intptr_t slot);
int QsciScintilla_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QsciScintilla_override_virtual_apiContext(void* self, intptr_t slot);
struct miqt_array /* of struct miqt_string */  QsciScintilla_virtualbase_apiContext(void* self, int pos, int* context_start, int* last_word_start);
bool QsciScintilla_override_virtual_findFirst(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_findFirst(void* self, struct miqt_string expr, bool re, bool cs, bool wo, bool wrap, bool forward, int line, int index, bool show, bool posix, bool cxx11);
bool QsciScintilla_override_virtual_findFirstInSelection(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_findFirstInSelection(void* self, struct miqt_string expr, bool re, bool cs, bool wo, bool forward, bool show, bool posix, bool cxx11);
bool QsciScintilla_override_virtual_findNext(void* self, intptr_t slot);
bool QsciScintilla_virtualbase_findNext(void* self);
bool QsciScintilla_override_virtual_recolor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_recolor(void* self, int start, int end);
bool QsciScintilla_override_virtual_replace(void* self, intptr_t slot);
void QsciScintilla_virtualbase_replace(void* self, struct miqt_string replaceStr);
bool QsciScintilla_override_virtual_append(void* self, intptr_t slot);
void QsciScintilla_virtualbase_append(void* self, struct miqt_string text);
bool QsciScintilla_override_virtual_autoCompleteFromAll(void* self, intptr_t slot);
void QsciScintilla_virtualbase_autoCompleteFromAll(void* self);
bool QsciScintilla_override_virtual_autoCompleteFromAPIs(void* self, intptr_t slot);
void QsciScintilla_virtualbase_autoCompleteFromAPIs(void* self);
bool QsciScintilla_override_virtual_autoCompleteFromDocument(void* self, intptr_t slot);
void QsciScintilla_virtualbase_autoCompleteFromDocument(void* self);
bool QsciScintilla_override_virtual_callTip(void* self, intptr_t slot);
void QsciScintilla_virtualbase_callTip(void* self);
bool QsciScintilla_override_virtual_clear(void* self, intptr_t slot);
void QsciScintilla_virtualbase_clear(void* self);
bool QsciScintilla_override_virtual_copy(void* self, intptr_t slot);
void QsciScintilla_virtualbase_copy(void* self);
bool QsciScintilla_override_virtual_cut(void* self, intptr_t slot);
void QsciScintilla_virtualbase_cut(void* self);
bool QsciScintilla_override_virtual_ensureCursorVisible(void* self, intptr_t slot);
void QsciScintilla_virtualbase_ensureCursorVisible(void* self);
bool QsciScintilla_override_virtual_ensureLineVisible(void* self, intptr_t slot);
void QsciScintilla_virtualbase_ensureLineVisible(void* self, int line);
bool QsciScintilla_override_virtual_foldAll(void* self, intptr_t slot);
void QsciScintilla_virtualbase_foldAll(void* self, bool children);
bool QsciScintilla_override_virtual_foldLine(void* self, intptr_t slot);
void QsciScintilla_virtualbase_foldLine(void* self, int line);
bool QsciScintilla_override_virtual_indent(void* self, intptr_t slot);
void QsciScintilla_virtualbase_indent(void* self, int line);
bool QsciScintilla_override_virtual_insert(void* self, intptr_t slot);
void QsciScintilla_virtualbase_insert(void* self, struct miqt_string text);
bool QsciScintilla_override_virtual_insertAt(void* self, intptr_t slot);
void QsciScintilla_virtualbase_insertAt(void* self, struct miqt_string text, int line, int index);
bool QsciScintilla_override_virtual_moveToMatchingBrace(void* self, intptr_t slot);
void QsciScintilla_virtualbase_moveToMatchingBrace(void* self);
bool QsciScintilla_override_virtual_paste(void* self, intptr_t slot);
void QsciScintilla_virtualbase_paste(void* self);
bool QsciScintilla_override_virtual_redo(void* self, intptr_t slot);
void QsciScintilla_virtualbase_redo(void* self);
bool QsciScintilla_override_virtual_removeSelectedText(void* self, intptr_t slot);
void QsciScintilla_virtualbase_removeSelectedText(void* self);
bool QsciScintilla_override_virtual_replaceSelectedText(void* self, intptr_t slot);
void QsciScintilla_virtualbase_replaceSelectedText(void* self, struct miqt_string text);
bool QsciScintilla_override_virtual_resetSelectionBackgroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_resetSelectionBackgroundColor(void* self);
bool QsciScintilla_override_virtual_resetSelectionForegroundColor(void* self, intptr_t slot);
void QsciScintilla_virtualbase_resetSelectionForegroundColor(void* self);
bool QsciScintilla_override_virtual_selectAll(void* self, intptr_t slot);
void QsciScintilla_virtualbase_selectAll(void* self, bool select);
bool QsciScintilla_override_virtual_selectToMatchingBrace(void* self, intptr_t slot);
void QsciScintilla_virtualbase_selectToMatchingBrace(void* self);
bool QsciScintilla_override_virtual_setAutoCompletionCaseSensitivity(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setAutoCompletionCaseSensitivity(void* self, bool cs);
bool QsciScintilla_override_virtual_setAutoCompletionReplaceWord(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setAutoCompletionReplaceWord(void* self, bool replace);
bool QsciScintilla_override_virtual_setAutoCompletionShowSingle(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setAutoCompletionShowSingle(void* self, bool single);
bool QsciScintilla_override_virtual_setAutoCompletionSource(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setAutoCompletionSource(void* self, int source);
bool QsciScintilla_override_virtual_setAutoCompletionThreshold(void* self, intptr_t slot);
void QsciScintilla_virtualbase_setAutoCompletionThreshold(void* self, int thresh);
void QsciScintilla_virtualbase_setAutoCompletionUseSingle(void* self, int single);