qt-restricted-extras/qscintilla6/gen_qsciscintilla.nim

proc fcQsciScintilla_setIndicatorDrawUnder2(self: pointer, under: bool, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorDrawUnder2".}
proc fcQsciScintilla_setIndicatorForegroundColor2(self: pointer, col: pointer, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorForegroundColor2".}
proc fcQsciScintilla_setIndicatorHoverForegroundColor2(self: pointer, col: pointer, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorHoverForegroundColor2".}
proc fcQsciScintilla_setIndicatorHoverStyle2(self: pointer, style: cint, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorHoverStyle2".}
proc fcQsciScintilla_setIndicatorOutlineColor2(self: pointer, col: pointer, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorOutlineColor2".}
proc fcQsciScintilla_clearMarginText1(self: pointer, line: cint): void {.importc: "QsciScintilla_clearMarginText1".}
proc fcQsciScintilla_setMarkerBackgroundColor2(self: pointer, col: pointer, markerNumber: cint): void {.importc: "QsciScintilla_setMarkerBackgroundColor2".}
proc fcQsciScintilla_setMarkerForegroundColor2(self: pointer, col: pointer, markerNumber: cint): void {.importc: "QsciScintilla_setMarkerForegroundColor2".}
proc fcQsciScintilla_setWrapVisualFlags2(self: pointer, endFlag: cint, startFlag: cint): void {.importc: "QsciScintilla_setWrapVisualFlags2".}
proc fcQsciScintilla_setWrapVisualFlags3(self: pointer, endFlag: cint, startFlag: cint, indent: cint): void {.importc: "QsciScintilla_setWrapVisualFlags3".}
proc fQsciScintilla_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QsciScintilla_virtualbase_metacall".}
proc fcQsciScintilla_override_virtual_metacall(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_metacall".}
proc fQsciScintilla_virtualbase_apiContext(self: pointer, pos: cint, context_start: ptr cint, last_word_start: ptr cint): struct_miqt_array{.importc: "QsciScintilla_virtualbase_apiContext".}
proc fcQsciScintilla_override_virtual_apiContext(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_apiContext".}
proc fQsciScintilla_virtualbase_findFirst(self: pointer, expr: struct_miqt_string, re: bool, cs: bool, wo: bool, wrap: bool, forward: bool, line: cint, index: cint, show: bool, posix: bool, cxx11: bool): bool{.importc: "QsciScintilla_virtualbase_findFirst".}
proc fcQsciScintilla_override_virtual_findFirst(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_findFirst".}
proc fQsciScintilla_virtualbase_findFirstInSelection(self: pointer, expr: struct_miqt_string, re: bool, cs: bool, wo: bool, forward: bool, show: bool, posix: bool, cxx11: bool): bool{.importc: "QsciScintilla_virtualbase_findFirstInSelection".}
proc fcQsciScintilla_override_virtual_findFirstInSelection(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_findFirstInSelection".}
proc fQsciScintilla_virtualbase_findNext(self: pointer, ): bool{.importc: "QsciScintilla_virtualbase_findNext".}
proc fcQsciScintilla_override_virtual_findNext(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_findNext".}
proc fQsciScintilla_virtualbase_recolor(self: pointer, start: cint, endVal: cint): void{.importc: "QsciScintilla_virtualbase_recolor".}
proc fcQsciScintilla_override_virtual_recolor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_recolor".}
proc fQsciScintilla_virtualbase_replace(self: pointer, replaceStr: struct_miqt_string): void{.importc: "QsciScintilla_virtualbase_replace".}
proc fcQsciScintilla_override_virtual_replace(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_replace".}
proc fQsciScintilla_virtualbase_append(self: pointer, text: struct_miqt_string): void{.importc: "QsciScintilla_virtualbase_append".}
proc fcQsciScintilla_override_virtual_append(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_append".}
proc fQsciScintilla_virtualbase_autoCompleteFromAll(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_autoCompleteFromAll".}
proc fcQsciScintilla_override_virtual_autoCompleteFromAll(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_autoCompleteFromAll".}
proc fQsciScintilla_virtualbase_autoCompleteFromAPIs(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_autoCompleteFromAPIs".}
proc fcQsciScintilla_override_virtual_autoCompleteFromAPIs(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_autoCompleteFromAPIs".}
proc fQsciScintilla_virtualbase_autoCompleteFromDocument(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_autoCompleteFromDocument".}
proc fcQsciScintilla_override_virtual_autoCompleteFromDocument(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_autoCompleteFromDocument".}
proc fQsciScintilla_virtualbase_callTip(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_callTip".}
proc fcQsciScintilla_override_virtual_callTip(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_callTip".}
proc fQsciScintilla_virtualbase_clear(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_clear".}
proc fcQsciScintilla_override_virtual_clear(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_clear".}
proc fQsciScintilla_virtualbase_copy(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_copy".}
proc fcQsciScintilla_override_virtual_copy(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_copy".}
proc fQsciScintilla_virtualbase_cut(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_cut".}
proc fcQsciScintilla_override_virtual_cut(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_cut".}
proc fQsciScintilla_virtualbase_ensureCursorVisible(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_ensureCursorVisible".}
proc fcQsciScintilla_override_virtual_ensureCursorVisible(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_ensureCursorVisible".}
proc fQsciScintilla_virtualbase_ensureLineVisible(self: pointer, line: cint): void{.importc: "QsciScintilla_virtualbase_ensureLineVisible".}
proc fcQsciScintilla_override_virtual_ensureLineVisible(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_ensureLineVisible".}
proc fQsciScintilla_virtualbase_foldAll(self: pointer, children: bool): void{.importc: "QsciScintilla_virtualbase_foldAll".}
proc fcQsciScintilla_override_virtual_foldAll(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_foldAll".}
proc fQsciScintilla_virtualbase_foldLine(self: pointer, line: cint): void{.importc: "QsciScintilla_virtualbase_foldLine".}
proc fcQsciScintilla_override_virtual_foldLine(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_foldLine".}
proc fQsciScintilla_virtualbase_indent(self: pointer, line: cint): void{.importc: "QsciScintilla_virtualbase_indent".}
proc fcQsciScintilla_override_virtual_indent(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_indent".}
proc fQsciScintilla_virtualbase_insert(self: pointer, text: struct_miqt_string): void{.importc: "QsciScintilla_virtualbase_insert".}
proc fcQsciScintilla_override_virtual_insert(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_insert".}
proc fQsciScintilla_virtualbase_insertAt(self: pointer, text: struct_miqt_string, line: cint, index: cint): void{.importc: "QsciScintilla_virtualbase_insertAt".}
proc fcQsciScintilla_override_virtual_insertAt(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_insertAt".}
proc fQsciScintilla_virtualbase_moveToMatchingBrace(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_moveToMatchingBrace".}
proc fcQsciScintilla_override_virtual_moveToMatchingBrace(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_moveToMatchingBrace".}
proc fQsciScintilla_virtualbase_paste(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_paste".}
proc fcQsciScintilla_override_virtual_paste(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_paste".}
proc fQsciScintilla_virtualbase_redo(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_redo".}
proc fcQsciScintilla_override_virtual_redo(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_redo".}
proc fQsciScintilla_virtualbase_removeSelectedText(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_removeSelectedText".}
proc fcQsciScintilla_override_virtual_removeSelectedText(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_removeSelectedText".}
proc fQsciScintilla_virtualbase_replaceSelectedText(self: pointer, text: struct_miqt_string): void{.importc: "QsciScintilla_virtualbase_replaceSelectedText".}
proc fcQsciScintilla_override_virtual_replaceSelectedText(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_replaceSelectedText".}
proc fQsciScintilla_virtualbase_resetSelectionBackgroundColor(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_resetSelectionBackgroundColor".}
proc fcQsciScintilla_override_virtual_resetSelectionBackgroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_resetSelectionBackgroundColor".}
proc fQsciScintilla_virtualbase_resetSelectionForegroundColor(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_resetSelectionForegroundColor".}
proc fcQsciScintilla_override_virtual_resetSelectionForegroundColor(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_resetSelectionForegroundColor".}
proc fQsciScintilla_virtualbase_selectAll(self: pointer, select: bool): void{.importc: "QsciScintilla_virtualbase_selectAll".}
proc fcQsciScintilla_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_selectAll".}
proc fQsciScintilla_virtualbase_selectToMatchingBrace(self: pointer, ): void{.importc: "QsciScintilla_virtualbase_selectToMatchingBrace".}
proc fcQsciScintilla_override_virtual_selectToMatchingBrace(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_selectToMatchingBrace".}
proc fQsciScintilla_virtualbase_setAutoCompletionCaseSensitivity(self: pointer, cs: bool): void{.importc: "QsciScintilla_virtualbase_setAutoCompletionCaseSensitivity".}
proc fcQsciScintilla_override_virtual_setAutoCompletionCaseSensitivity(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setAutoCompletionCaseSensitivity".}
proc fQsciScintilla_virtualbase_setAutoCompletionReplaceWord(self: pointer, replace: bool): void{.importc: "QsciScintilla_virtualbase_setAutoCompletionReplaceWord".}
proc fcQsciScintilla_override_virtual_setAutoCompletionReplaceWord(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setAutoCompletionReplaceWord".}
proc fQsciScintilla_virtualbase_setAutoCompletionShowSingle(self: pointer, single: bool): void{.importc: "QsciScintilla_virtualbase_setAutoCompletionShowSingle".}
proc fcQsciScintilla_override_virtual_setAutoCompletionShowSingle(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setAutoCompletionShowSingle".}
proc fQsciScintilla_virtualbase_setAutoCompletionSource(self: pointer, source: cint): void{.importc: "QsciScintilla_virtualbase_setAutoCompletionSource".}
proc fcQsciScintilla_override_virtual_setAutoCompletionSource(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setAutoCompletionSource".}
proc fQsciScintilla_virtualbase_setAutoCompletionThreshold(self: pointer, thresh: cint): void{.importc: "QsciScintilla_virtualbase_setAutoCompletionThreshold".}
proc fcQsciScintilla_override_virtual_setAutoCompletionThreshold(self: pointer, slot: int) {.importc: "QsciScintilla_override_virtual_setAutoCompletionThreshold".}
proc fQsciScintilla_virtualbase_setAutoCompletionUseSingle(self: pointer, single: cint): void{.importc: "QsciScintilla_virtualbase_setAutoCompletionUseSingle".}
